Fix hero section height on small viewport heights

--- a/src/wp-content/themes/tuleva/css/main.css
+++ b/src/wp-content/themes/tuleva/css/main.css
@@ -14528,12 +14528,6 @@ sup {
   background-size: auto, cover;
   background-repeat: repeat, no-repeat;
 }
-@media (min-width: 992px) {
-  .bg-hero-main {
-    height: 100vh;
-    max-height: 720px;
-  }
-}
 @media (max-width: 991px) {
   .bg-hero-main {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(209, 244, 255, 0.88)), to(rgba(209, 244, 255, 0.88))), url("../img/dog-p-1600.jpeg");
